--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ defaultTasks 'build'
 
 apply plugin: 'java'
 apply plugin: 'eclipse'
+apply plugin: 'idea'
 
 repositories {
 	mavenRepo urls: "file://" + System.getProperty('user.home') + "/.m2/repository/"
