--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,7 @@ springIntegrationVersion='2.0.0.M5'
 dependencies {
 	compile "org.springframework.integration:org.springframework.integration:${springIntegrationVersion}"
     compile "com.google.collections:google-collections:1.0"
+    compile "com.thoughtworks.xstream:xstream:1.3.1"
 	testCompile "junit:junit:4.8.1"
 
 }
