--- a/build.gradle
+++ b/build.gradle
@@ -7,19 +7,19 @@ apply plugin: 'idea'
 repositories {
 	mavenRepo urls: "file://" + System.getProperty('user.home') + "/.m2/repository/"
 	mavenCentral()
-	mavenRepo urls: "http://repository.springsource.com/maven/bundles/milestone"
-	mavenRepo urls: "http://repository.springsource.com/maven/bundles/release"
-	mavenRepo urls: "http://repository.springsource.com/maven/bundles/external"
+	mavenRepo urls: "http://s3.amazonaws.com/maven.springframework.org/milestone"
+	mavenRepo urls: "http://s3.amazonaws.com/maven.springframework.org/release"
 }
 
 sourceCompatibility = 1.6
 
 springIntegrationVersion='2.0.0.M5'
+springVersion='3.0.3.RELEASE'
 
 dependencies {
-	compile "org.springframework.integration:org.springframework.integration:${springIntegrationVersion}"
+	compile "org.springframework.integration:spring-integration:${springIntegrationVersion}"
+	testCompile "org.springframework:spring-test:${springVersion}"
     compile "com.google.collections:google-collections:1.0"
     compile "com.thoughtworks.xstream:xstream:1.3.1"
 	testCompile "junit:junit:4.8.1"
-
 }
