--- a/build.gradle
+++ b/build.gradle
@@ -13,13 +13,17 @@ repositories {
 
 sourceCompatibility = 1.6
 
-springIntegrationVersion='2.0.0.M5'
-springVersion='3.0.3.RELEASE'
+springIntegrationVersion = '2.0.0.M5'
+springVersion = '3.0.3.RELEASE'
 
 dependencies {
-	compile "org.springframework.integration:spring-integration:${springIntegrationVersion}"
+	compile "org.springframework.integration:spring-integration-core:${springIntegrationVersion}"
+	compile "org.springframework:spring-core:${springVersion}"
+	compile "org.springframework:spring-beans:${springVersion}"
+	compile "org.springframework:spring-context:${springVersion}"
+	compile "com.google.collections:google-collections:1.0"
+	compile "com.thoughtworks.xstream:xstream:1.3.1"
 	testCompile "org.springframework:spring-test:${springVersion}"
-    compile "com.google.collections:google-collections:1.0"
-    compile "com.thoughtworks.xstream:xstream:1.3.1"
 	testCompile "junit:junit:4.8.1"
 }
+
