--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,8 @@ dependencies {
 	compile "com.thoughtworks.xstream:xstream:1.3.1"
 	testCompile "org.springframework:spring-test:${springVersion}"
 	testCompile "junit:junit:4.8.1"
+	testCompile "org.mockito:mockito-all:1.8.5"
+	testCompile "org.hamcrest:hamcrest-all:1.1"
 }
 
 task wrapper(type: Wrapper) {
