--- a/build.gradle
+++ b/build.gradle
@@ -14,8 +14,8 @@ repositories {
 
 sourceCompatibility = 1.6
 
-springIntegrationVersion = '2.0.0.BUILD-SNAPSHOT'
-springVersion = '3.0.4.BUILD-SNAPSHOT'
+springIntegrationVersion = '2.0.0.M6'
+springVersion = '3.0.3.RELEASE'
 
 dependencies {
 	compile "org.springframework.integration:spring-integration-core:${springIntegrationVersion}"
@@ -24,6 +24,8 @@ dependencies {
 	compile "org.springframework:spring-context:${springVersion}"
 	compile "com.google.collections:google-collections:1.0"
 	compile "com.thoughtworks.xstream:xstream:1.3.1"
+    compile "org.slf4j:slf4j-api:1.6.1"
+    compile "org.slf4j:slf4j-log4j12:1.6.1"
 	testCompile "org.springframework:spring-test:${springVersion}"
 	testCompile "junit:junit:4.8.1"
 	testCompile "org.mockito:mockito-all:1.8.5"
